--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/public/runtime-env.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
